[package]
name = "rust-mdb-demo"
version = "0.1.0"
authors = ["Mike Zeller <mike@mikezeller.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustmdb"
crate_type = ["cdylib"]

[dependencies]
mdb_sys = { path = "./mdb_sys" }
lazy_static = "1.4"
